// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQDxB4LKsXnazZ-huBq9MXqZPLU879iGA64UYe4zrXmgaw9W"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQAmZXoGLbHwItWinyDTYtiOIDQUa2DP34FiGzcZmSCtZuR8"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQAtVF0DSRwZprQZsoHxjxhC9RpUd35y6KBfVrGBUFPMnf94"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQDxB4LKsXnazZ-huBq9MXqZPLU879iGA64UYe4zrXmgaw9W",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 20115n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDxB4LKsXnazZ-huBq9MXqZPLU879iGA64UYe4zrXmgaw9W",
            "to": "kQAmZXoGLbHwItWinyDTYtiOIDQUa2DP34FiGzcZmSCtZuR8",
            "type": "internal",
            "value": 9964059000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDxB4LKsXnazZ-huBq9MXqZPLU879iGA64UYe4zrXmgaw9W",
          "to": "kQAmZXoGLbHwItWinyDTYtiOIDQUa2DP34FiGzcZmSCtZuR8",
          "type": "internal",
          "value": 9964059000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 20123n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAmZXoGLbHwItWinyDTYtiOIDQUa2DP34FiGzcZmSCtZuR8",
            "to": "kQAtVF0DSRwZprQZsoHxjxhC9RpUd35y6KBfVrGBUFPMnf94",
            "type": "internal",
            "value": 9933517000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAmZXoGLbHwItWinyDTYtiOIDQUa2DP34FiGzcZmSCtZuR8",
          "to": "kQAtVF0DSRwZprQZsoHxjxhC9RpUd35y6KBfVrGBUFPMnf94",
          "type": "internal",
          "value": 9933517000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 19876n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAtVF0DSRwZprQZsoHxjxhC9RpUd35y6KBfVrGBUFPMnf94",
            "to": "kQAtVF0DSRwZprQZsoHxjxhC9RpUd35y6KBfVrGBUFPMnf94",
            "type": "internal",
            "value": 9903214000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAtVF0DSRwZprQZsoHxjxhC9RpUd35y6KBfVrGBUFPMnf94",
          "to": "kQAtVF0DSRwZprQZsoHxjxhC9RpUd35y6KBfVrGBUFPMnf94",
          "type": "internal",
          "value": 9903214000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 6182n,
      },
    ],
  },
]
`;
